--- a/coincheCounter/app/src/main/res/layout/activity_main.xml
+++ b/coincheCounter/app/src/main/res/layout/activity_main.xml
@@ -23,12 +23,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:src="@android:drawable/btn_plus"
+        android:src="@drawable/plus"
         android:contentDescription="@string/add_button"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="horizontal"
         android:weightSum="2">
 
@@ -45,7 +45,7 @@
 
         <ListView
             android:id="@+id/scoreTeam2"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
 
