--- a/coincheCounter/app/src/main/res/values/styles.xml
+++ b/coincheCounter/app/src/main/res/values/styles.xml
@@ -8,4 +8,11 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="title_style">
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:textSize">25sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@android:color/holo_blue_dark</item>
+    </style>
+
 </resources>
