--- a/coincheCounter/app/src/main/res/layout/view_score.xml
+++ b/coincheCounter/app/src/main/res/layout/view_score.xml
@@ -7,6 +7,9 @@
     <TextView
         android:id="@+id/scoreText"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        style="@style/title_style"
+        android:textColor="@color/green"
+        android:textSize="20sp"/>
 
 </LinearLayout>
